--- a/templates/Login.html
+++ b/templates/Login.html
@@ -26,9 +26,9 @@
       <h1>Login Here</h1>
       <form action="/welcome" method="post">
         <p>USERNAME</p>
-        <input type="text" name="user" placeholder="Enter Username" />
+        <input type="text" name="user" placeholder="Enter Username" required />
         <p>PASSWORD</p>
-        <input type="text" name="pass" placeholder="Enter Password" />
+        <input type="text" name="pass" placeholder="Enter Password" required/>
         <input type="submit" value="LOGIN" /><br />
         <a href="#">Forgot Your Password</a> <br />
         <a href="#">Create new Account</a>
