--- a/templates/Login.html
+++ b/templates/Login.html
@@ -28,7 +28,7 @@
         <p>USERNAME</p>
         <input type="text" name="user" placeholder="Enter Username" />
         <p>PASSWORD</p>
-        <input type="text" name="pass" placeholder="Enter Password" />
+        <input type="password" name="pass" placeholder="Enter Password" />
         <input type="submit" value="LOGIN" /><br />
         <a href="#">Forgot Your Password</a> <br />
         <a href="#">Create new Account</a>
